# gaitan

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  doxygen.conf
Redist/OpenNI2/Drivers/: libFreenectDriver.so.1.2.1
include/: CMakeLists.txt
include/libgaitan/: box.h  conversion.h  encoder.h  foot.h  geometry.h  inertia.h  kinect.h  mutex.h  myFreenectDevice.h  plane.h  plot.h  rgbdsensor.h  sensor.h  shape.h  synchro.h  table.h  table.sav.h
sav/: plot.cpp  plot.h
scripts/: acquire.sh  hello.sh  variables.sh
src/: box.cpp  conversion.cpp  encoder.cpp  foot.cpp  geometry.cpp  inertia.cpp  kinect-SAV.cpp  kinect.cpp  plane.cpp  plot.cpp  rgbdsensor.cpp  sensor.cpp  shape.cpp  synchro.cpp  table.cpp  table.sav.cpp
test/: CMakeLists.txt  CMakeLists.txt.backup  main.cpp  testEigen.cpp  testEncoder.cpp  testFoot.cpp  testFreenect.cpp  testGlut.cpp  testKinect.cpp  testOpenNi.cpp  testPlaneFitting.cpp  testPlotEncoder.cpp  testSensor.cpp  testSynchroZeroBloc.cpp  testTable.cpp  testVisp.cpp  testVispKinect.cpp
test/Application/: CMakeLists.txt  encoderAcquire.cpp  encoderOdoFromRaw.cpp  encoderPlotOdo.cpp  encoderPlotOdoFromRaw.cpp  kinectAcquire.cpp  kinectDisplay.cpp  kinectInitConfig.cpp  kinectVisualizeBoxes.cpp  kinectVisualizeFeet.cpp  kinectVisualizePointCloud.cpp
test/Geometry/: CMakeLists.txt  testBox.cpp  testHomogeneousMatrix.cpp  testPCLPlaneFitting.cpp  testPCLSegment.cpp  testPlane.cpp  testPlaneOrientation.cpp  testShape.cpp
test/Geometry/PCL/: CMakeLists.txt  testKinectDisplayPCL.cpp  testPCLFindBox.cpp  testPCLPlaneFitting.cpp  testPCLSegment-v2.cpp  testPCLSegment-v3.cpp  testPCLSegment-v4.cpp  testPCLSegment.cpp  testPCLSegmentMultiImages.cpp  testPCLUseBoxes.cpp  testPCLViewerPlaneAndCloud.cpp
test/Gnuplot/: testGnuplot.cpp
test/ImagesIO/: CMakeLists.txt  testTiff2PCL.cpp  testTiff2PDFM.cpp  testTiff2PFM.cpp
test/Phidget/: Accelerometer-simple  AdvancedServo-simple  Analog-simple  Bridge-simple  Dictionary-simple  Encoder-simple  FrequencyCounter-simple  GPS-simple  HelloWorld  IR-simple  InterfaceKit-simple  LED-simple  Makefile  Manager-simple  MotorControl-simple  PHSensor-simple  RFID-simple  Servo-simple  Spatial-simple  Stepper-simple  TemperatureSensor-simple  TextLCD-simple  config.h  config.status  configure
test/Phidget/.deps/: Accelerometer-simple.Po  AdvancedServo-simple.Po  Analog-simple.Po  Bridge-simple.Po  Dictionary-simple.Po  Encoder-simple.Po  FrequencyCounter-simple.Po  GPS-simple.Po  HelloWorld.Po  IR-simple.Po  InterfaceKit-simple.Po  LED-simple.Po  Manager-simple.Po  MotorControl-simple.Po  PHSensor-simple.Po  RFID-simple.Po  Servo-simple.Po  Spatial-simple.Po  Stepper-simple.Po  TemperatureSensor-simple.Po  TextLCD-simple.Po
test/Polytope/: CMakeLists.txt  Donnees_polytope_handibio_1000.txt  Donnees_polytope_handibio_100000.txt  crea_boite.cpp
test/Sensor/: CMakeLists.txt  testRGBDSensor.cpp  testRGBDSensorInitConf.cpp  testRGBDSensorReadConf.cpp  testSaveFeetTrajectories.cpp  testSynchroEncoderKinect.cpp  testSynchroEncoderKinectBoxes.cpp  testSynchroEncoderKinectFromFile.cpp  testSynchroEncoderKinectPlot.cpp  testSynchroEncoderKinectTwoFeet.cpp  testSynchroEncoderKinectVisualize.cpp  twoFeetTrajectories.cpp
test/Sensor/Encoder/: CMakeLists.txt  encoderGrabber.cpp  testEncoder.cpp  testEncoderAcquire.cpp  testEncoderChangeOdoFile.cpp  testEncoderGrabberWithClass.cpp  testEncoderReadAndPlot.cpp
test/Sensor/Kinect/: CMakeLists.txt  testKinect.cpp  testKinectAcquire.cpp  testKinectBoxOnFeet.cpp  testKinectBoxSelectionMultiImage.cpp  testKinectCalibrationMultiImage-v2.cpp  testKinectCalibrationMultiImage.cpp  testKinectChangeTimeFile.cpp  testKinectConvert.cpp  testKinectConvertToEigenMatrix.cpp  testKinectDetectGround.cpp  testKinectDisplay.cpp  testKinectLimitFov.cpp  testKinectRead.cpp  testKinectVisualizeFeet.cpp  testKinectVisualizeFeetInWorld.cpp  testOpenNi.cpp
test/test/: Makefile  cmake_install.cmake
test/test/Geometry/: Makefile  cmake_install.cmake
test/test/Sensor/: Makefile  cmake_install.cmake
test/test/Sensor/Encoder/: Makefile  cmake_install.cmake
test/test/Sensor/Kinect/: Makefile  cmake_install.cmake
